@@ -1234,6 +1234,12 @@ void Lua_Client::SendMarqueeMessage(uint32 type, uint32 priority, uint32 fade_in
 	self->SendMarqueeMessage(type, priority, fade_in, fade_out, duration, msg);
 }
 
+void Lua_Client::PlayMP3(std::string file)
+{
+	Lua_Safe_Call_Void();
+	self->PlayMP3(file.c_str());
+}
+
 luabind::scope lua_register_client() {
 	return luabind::class_<Lua_Client, Lua_Mob>("Client")
 		.def(luabind::constructor<>())
@@ -1479,7 +1485,8 @@ luabind::scope lua_register_client() {
 		.def("SetHunger", (void(Lua_Client::*)(int))&Lua_Client::SetHunger)
 		.def("SetThirst", (void(Lua_Client::*)(int))&Lua_Client::SetThirst)
 		.def("SetConsumption", (void(Lua_Client::*)(int, int))&Lua_Client::SetConsumption)
-		.def("SendMarqueeMessage", (void(Lua_Client::*)(uint32, uint32, uint32, uint32, uint32, std::string))&Lua_Client::SendMarqueeMessage);
+		.def("SendMarqueeMessage", (void(Lua_Client::*)(uint32, uint32, uint32, uint32, uint32, std::string))&Lua_Client::SendMarqueeMessage)
+		.def("PlayMP3", (void(Lua_Client::*)(std::string))&Lua_Client::PlayMP3);
 }
 
 luabind::scope lua_register_inventory_where() {
